--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1105,8 +1105,7 @@
     "USERTAB": {
       "TITLE": "Usuarios",
       "TABLE": {
-        "FNAME": "Nombre",
-        "LNAME": "Apellido",
+        "FULL_NAME": "Nombre completo",
         "EMAIL": "Email",
         "ROLE": "Rol"
       },
@@ -1119,6 +1118,9 @@
         "ADMIN": "Admin",
         "WRITER": "Escritor"
       }
+    },
+    "COMMISSIONSTAB": {
+      "TITLE": "Comisiones"
     }
   },
   "MONTH": {
