feat: add time to event editor form

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -194,6 +194,9 @@
         "OPEN": "Inscriptions are open!",
         "CLICK": "Enroll now!"
       },
+      "TIME": {
+          "TITLE": "Time"
+      },
       "DATE": {
           "TITLE": "Dates",
           "UNIQUE": "Date",
@@ -244,6 +247,7 @@
           "DATES": "Event dates",
           "ERROR": {
               "UPDATE": "An error occurred while updating the event",
+              "TIME_REQUIRED": "The time is required",
               "DATE_REQUIRED": "The date is required",
               "DATE_INVALID": "The date format is invalid, it should be dd/mm/yyyy",
               "DATE_PAST": "The date cannot be in the past",
