feat: multiple-rol-support

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1125,7 +1125,8 @@
       },
       "ROLES": {
         "ADMIN": "Admin",
-        "WRITER": "Escritor"
+        "WRITER": "Escritor",
+        "IEEEMEMBER": "Miembro IEEE"
       }
     }
   },
