--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1072,7 +1072,8 @@
       },
       "ROLES": {
         "ADMIN": "Admin",
-        "WRITER": "Writer"
+        "WRITER": "Writer",
+        "IEEEMEMBER": "IEEE Member"
       }
     }
   },
