fix(wie): i18n typo

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1085,11 +1085,11 @@
         },
         {
           "QUESTION": "¿Qué puedo hacer en IEEE WIE ITBA?",
-          "ANSWER": "¡Lo que quieras! Siempre que vaya con nuestros objetivos. Podes unirte a cualquier proye que ya realicemos o proponer una actividad nueva. La organización se construye a partir de lo que los voluntarios deseen"
+          "ANSWER": "¡Lo que quieras! Siempre que vaya con nuestros objetivos. Podes unirte a cualquier proyecto que ya realicemos o proponer una actividad nueva. La organización se construye a partir de lo que los voluntarios deseen"
         },
         {
           "QUESTION": "¿Cuánto me demanda participar en IEEE WIE ITBA?",
-          "ANSWER": "Lo que vos quieras que te demande. Solo tenés que avisar en que cosas querés participar e informar de los avances. Somos todos alumnos por lo que entendemos perfectamente que a veces se nos compctolica mucho, en esos casos, solo es cuestión de comunicar que no vas a estar disponible y no va a haber ningún problema"
+          "ANSWER": "Lo que vos quieras que te demande. Solo tenés que avisar en que cosas querés participar e informar de los avances. Somos todos alumnos por lo que entendemos perfectamente que a veces se nos complica mucho, en esos casos, solo es cuestión de comunicar que no vas a estar disponible y no va a haber ningún problema"
         },
         {
           "QUESTION": "¿Cuáles son los objetivos de IEEE WIE ITBA?",
