--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -449,6 +449,8 @@
     }
   },
   "BITCUP": {
+    "PAGETITLE": "ITBA IEEE | Bit Cup",
+    "PAGEDESCRIPTION": "La Bit Cup es una competencia de programación abierta y gratuita organizada por IEEE ITBA en la que los participantes se proponen resolver distintos desafíos en un límite de tiempo.",
     "DESCRIPTION": "Descripción",
     "DESCRIPTION-TEXT": "La Bit Cup es una competencia de programación abierta y gratuita organizada por IEEE ITBA en la que los participantes se proponen resolver distintos desafíos en un límite de tiempo ¡Podés aprovechar para practicar para la IEEEXtreme y conocer el mundo de la programación competitiva!",
     "FORMAT": "Formato",
@@ -571,6 +573,8 @@
     }
   },
   "DATAANALYSIS": {
+    "PAGETITLE": "ITBA IEEE | Curso de Análisis de Datos en Python",
+    "PAGEDESCRIPTION": "Curso de Análisis de Datos en Python organizado por IEEE ITBA. Aprende a usar herramientas de visualización y análisis de datos en Python.",
     "CLASSES": {
       "C1": "Introducción a librerías (repaso), Lectura y escritura de archivos formato Excel y CSV y Manipulación de datos con Pandas",
       "C2": "Introducción a matplotlib, Visualización de datos, Personalización de los gráficos y Casos de aplicación",
@@ -662,6 +666,8 @@
     "CONTACTUS": "Contáctanos"
   },
   "WRITE-NEW": {
+    "PAGETITLE": "ITBA IEEE | Escribir Noticia",
+    "PAGEDESCRIPTION": "Escribe una noticia para la página de noticias de IEEE ITBA. ¡Comparte tus conocimientos con la comunidad!",
     "TITLE": "Escribir Noticia",
     "TITLE2": "Título",
     "POMPADOUR": "Copete",
@@ -676,6 +682,10 @@
     "FIRST_PARAGRAPH": "Primer párrafo encima de la imagen",
     "PUBLISH_NOW": "Publicar ahora",
     "PROGRAM_DATE": "Programar fecha de publicación"
+  },
+  "EDIT-NEW": {
+    "PAGETITLE": "ITBA IEEE | Editar Noticia",
+    "PAGEDESCRIPTION": "Edita una noticia de la página de noticias de IEEE ITBA"
   },
     "AUTH": {
         "LOGIN": {
@@ -700,9 +710,12 @@
       "DISABLED_USER": "Usuario ha sido deshabilitado"
     },
     "PAGETITLE": "Iniciar Sesión",
+    "PAGEDESCRIPTION": "Inicia sesión en IEEE ITBA.",
     "SUCCESS": "Bienvenido a IEEE!"
   },
   "REGISTER": {
+    "PAGETITLE": "ITBA IEEE | Registrarse",
+    "PAGEDESCRIPTION": "Registrate en IEEE ITBA. ¡Únete a nuestra comunidad!",
     "TITLE": "Registrarse",
     "FULL_NAME": "Nombre completo",
     "EMAIL": "Email",
@@ -786,6 +799,8 @@
     }
   },
   "ERROR404": {
+    "PAGETITLE": "ITBA IEEE | Página no encontrada",
+    "PAGEDESCRIPTION": "Página no encontrada - ITBA IEEE",
     "TITLE": "Página no encontrada",
     "APOLOGY": "Lo sentimos, la página que estaba buscando no existe u ocurrió algún otro error",
     "INDICATION": "Por favor regrese a la página de inicio",
@@ -924,6 +939,8 @@
     "SPONSORS": "Sponsors"
   },
   "TYPESCRIPT": {
+    "PAGETITLE": "ITBA IEEE | Curso de Typescript",
+    "PAGEDESCRIPTION": "Curso de Typescript organizado por IEEE ITBA. Aprende a programar con el lenguaje de programación de Typescript.",
     "TITLE": "Curso de Typescript",
     "DESCRIPTION": {
       "TITLE": "Descripción",
@@ -1106,6 +1123,8 @@
     "ABOUT": "Organización enfocada en la tecnología conformada por estudiantes y ex alumnos del ITBA, dedicada a inspirar y educar en diversas áreas de la tecnología relacionadas con la ingeniería y la tecnología de software."
   },
   "ADMIN": {
+    "PAGETITLE": "ITBA IEEE | Panel de administración",
+    "PAGEDESCRIPTION": "Panel de administración de ITBA IEEE",
     "TITLE": "Admin panel",
     "USERTAB": {
       "TITLE": "Usuarios",
@@ -1149,6 +1168,8 @@
       "11": "Diciembre"
   },
   "PROFILE": {
+      "PAGETITLE": "ITBA IEEE | Perfil",
+      "PAGEDESCRIPTION": "Perfil de usuario de IEEE ITBA",
       "TABS": {
           "GENERAL": "General",
           "SECURITY": "Seguridad"
